# telegram-tasks

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Readme.md  entrypoint.sh  manage.py  pyproject.toml
core/apps/bot/: admin.py  models.py
core/apps/bot/management/commands/: bot.py
core/apps/bot/migrations/: 0001_initial.py
core/apps/common/: models.py
core/apps/tasks/: admin.py  entity.py  models.py
core/apps/tasks/migrations/: 0001_initial.py
core/apps/tasks/services/: task.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
