[tool.poetry]
name = "telegram-tasks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
python-telegram-bot = "^21.1.1"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
